--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,15 @@
 /* You can customize theme styles here */
+
+.language-list {
+    list-style-type: none;
+    width: 144px;
+    padding: 0;
+    margin-bottom: -1px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.language-item {
+    color: #808080;
+}
